--- a/Programming Assignment 1/program01-template.ipynb
+++ b/Programming Assignment 1/program01-template.ipynb
@@ -1497,8 +1497,7 @@
     "**Task 2.2: What stands out to you about this summary? Write two or more observations**\n",
     "\n",
     "> - 2.2 #1: The numbers in the summary have a lot more decimal points\n",
-    "> - 2.2 #2: The summary provides quartile ranges, but there is a large difference between mean and 50% quartile for total population and number of apartments\n",
-    "> - ..."
+    "> - 2.2 #2: The summary provides quartile ranges, but there is a large difference between mean and 50% quartile for total population and number of apartments"
    ]
   },
   {
