--- a/Programming Assignment 1/program01-template.ipynb
+++ b/Programming Assignment 1/program01-template.ipynb
@@ -553,7 +553,7 @@
    ],
    "source": [
     "# preview subset of columns\n",
-    "filtered_df = raw_df[['DEVELOPMENT', 'TOTAL POPULATION', 'TOTAL NUMBER OF APARTMENTS', 'AVG MONTHLY GROSS RENT', 'NET DEV AREA SQ FT']]\n",
+    "filtered_df = raw_df[['DEVELOPMENT', 'TOTAL POPULATION', 'NUMBER OF CURRENT APARTMENTS', 'AVG MONTHLY GROSS RENT', 'NET DEV AREA SQ FT']]\n",
     "filtered_df "
    ]
   },
