Fix more errors
Updated in the rename

--- a/Programming Assignment 1/program01-template.ipynb
+++ b/Programming Assignment 1/program01-template.ipynb
@@ -747,7 +747,7 @@
     "\n",
     "filtered_df = filtered_df.rename(columns = {'DEVELOPMENT' : 'development', \n",
     "                                            'TOTAL POPULATION' : 'total_pop', \n",
-    "                                            'TOTAL NUMBER OF APARTMENTS' : 'num_apts', \n",
+    "                                            'NUMBER OF CURRENT APARTMENTS' : 'num_apts', \n",
     "                                            'AVG MONTHLY GROSS RENT' : 'avg_monthly_rent', \n",
     "                                            'NET DEV AREA SQ FT' : 'net_sqft'})\n",
     "filtered_df\n",
