--- a/Programming Assignment 1/program01-template.ipynb
+++ b/Programming Assignment 1/program01-template.ipynb
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 78,
    "id": "2a40b2a0",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "      <th></th>\n",
        "      <th>DEVELOPMENT</th>\n",
        "      <th>TOTAL POPULATION</th>\n",
-       "      <th>TOTAL NUMBER OF APARTMENTS</th>\n",
+       "      <th>NUMBER OF CURRENT APARTMENTS</th>\n",
        "      <th>AVG MONTHLY GROSS RENT</th>\n",
        "      <th>NET DEV AREA SQ FT</th>\n",
        "    </tr>\n",
@@ -427,7 +427,7 @@
        "      <th>0</th>\n",
        "      <td>1010 EAST 178TH STREET</td>\n",
        "      <td>413</td>\n",
-       "      <td>220</td>\n",
+       "      <td>205</td>\n",
        "      <td>$488</td>\n",
        "      <td>88,172</td>\n",
        "    </tr>\n",
@@ -435,7 +435,7 @@
        "      <th>1</th>\n",
        "      <td>1162-1176 WASHINGTON AVENUE</td>\n",
        "      <td>141</td>\n",
-       "      <td>66</td>\n",
+       "      <td>65</td>\n",
        "      <td>$502</td>\n",
        "      <td>18,987</td>\n",
        "    </tr>\n",
@@ -443,7 +443,7 @@
        "      <th>2</th>\n",
        "      <td>131 SAINT NICHOLAS AVENUE</td>\n",
        "      <td>157</td>\n",
-       "      <td>100</td>\n",
+       "      <td>88</td>\n",
        "      <td>$514</td>\n",
        "      <td>29,359</td>\n",
        "    </tr>\n",
@@ -483,7 +483,7 @@
        "      <th>342</th>\n",
        "      <td>WEEKSVILLE GARDENS</td>\n",
        "      <td>697</td>\n",
-       "      <td>257</td>\n",
+       "      <td>249</td>\n",
        "      <td>$619</td>\n",
        "      <td>141,365</td>\n",
        "    </tr>\n",
@@ -491,7 +491,7 @@
        "      <th>343</th>\n",
        "      <td>WILLIAMS PLAZA</td>\n",
        "      <td>1,290</td>\n",
-       "      <td>577</td>\n",
+       "      <td>571</td>\n",
        "      <td>$496</td>\n",
        "      <td>242,859</td>\n",
        "    </tr>\n",
@@ -499,7 +499,7 @@
        "      <th>344</th>\n",
        "      <td>WILLIAMSBURG</td>\n",
        "      <td>2,873</td>\n",
-       "      <td>1,621</td>\n",
+       "      <td>1,564</td>\n",
        "      <td>$508</td>\n",
        "      <td>927,103</td>\n",
        "    </tr>\n",
@@ -507,7 +507,7 @@
        "      <th>345</th>\n",
        "      <td>WISE TOWERS</td>\n",
        "      <td>736</td>\n",
-       "      <td>399</td>\n",
+       "      <td>389</td>\n",
        "      <td>$591</td>\n",
        "      <td>100,247</td>\n",
        "    </tr>\n",
@@ -530,23 +530,23 @@
        "344                           WILLIAMSBURG            2,873   \n",
        "345                            WISE TOWERS              736   \n",
        "\n",
-       "    TOTAL NUMBER OF APARTMENTS AVG MONTHLY GROSS RENT NET DEV AREA SQ FT  \n",
-       "0                          220                   $488             88,172  \n",
-       "1                           66                   $502             18,987  \n",
-       "2                          100                   $514             29,359  \n",
-       "3                           96                   $517             39,937  \n",
-       "4                           35                   $698              9,621  \n",
-       "..                         ...                    ...                ...  \n",
-       "341                         32                   $578              8,743  \n",
-       "342                        257                   $619            141,365  \n",
-       "343                        577                   $496            242,859  \n",
-       "344                      1,621                   $508            927,103  \n",
-       "345                        399                   $591            100,247  \n",
+       "    NUMBER OF CURRENT APARTMENTS AVG MONTHLY GROSS RENT NET DEV AREA SQ FT  \n",
+       "0                            205                   $488             88,172  \n",
+       "1                             65                   $502             18,987  \n",
+       "2                             88                   $514             29,359  \n",
+       "3                             96                   $517             39,937  \n",
+       "4                             35                   $698              9,621  \n",
+       "..                           ...                    ...                ...  \n",
+       "341                           32                   $578              8,743  \n",
+       "342                          249                   $619            141,365  \n",
+       "343                          571                   $496            242,859  \n",
+       "344                        1,564                   $508            927,103  \n",
+       "345                          389                   $591            100,247  \n",
        "\n",
        "[346 rows x 5 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 77,
    "id": "42ec4145",
    "metadata": {},
    "outputs": [
@@ -610,51 +610,79 @@
        "      <th>num_apts</th>\n",
        "      <th>avg_monthly_rent</th>\n",
        "      <th>net_sqft</th>\n",
+       "      <th>sqft_per_apt</th>\n",
+       "      <th>sqft_per_person</th>\n",
+       "      <th>rent_per_sqft</th>\n",
+       "      <th>ppl_per_apt</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1010 EAST 178TH STREET</td>\n",
-       "      <td>413</td>\n",
-       "      <td>220</td>\n",
-       "      <td>$488</td>\n",
-       "      <td>88,172</td>\n",
+       "      <td>413.0</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>488.0</td>\n",
+       "      <td>88172.0</td>\n",
+       "      <td>400.781818</td>\n",
+       "      <td>213.491525</td>\n",
+       "      <td>0.005535</td>\n",
+       "      <td>1.877273</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1162-1176 WASHINGTON AVENUE</td>\n",
-       "      <td>141</td>\n",
-       "      <td>66</td>\n",
-       "      <td>$502</td>\n",
-       "      <td>18,987</td>\n",
+       "      <td>141.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>502.0</td>\n",
+       "      <td>18987.0</td>\n",
+       "      <td>287.681818</td>\n",
+       "      <td>134.659574</td>\n",
+       "      <td>0.026439</td>\n",
+       "      <td>2.136364</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>131 SAINT NICHOLAS AVENUE</td>\n",
-       "      <td>157</td>\n",
-       "      <td>100</td>\n",
-       "      <td>$514</td>\n",
-       "      <td>29,359</td>\n",
+       "      <td>157.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>514.0</td>\n",
+       "      <td>29359.0</td>\n",
+       "      <td>293.590000</td>\n",
+       "      <td>187.000000</td>\n",
+       "      <td>0.017507</td>\n",
+       "      <td>1.570000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1471 WATSON AVENUE</td>\n",
-       "      <td>116</td>\n",
-       "      <td>96</td>\n",
-       "      <td>$517</td>\n",
-       "      <td>39,937</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>517.0</td>\n",
+       "      <td>39937.0</td>\n",
+       "      <td>416.010417</td>\n",
+       "      <td>344.284483</td>\n",
+       "      <td>0.012945</td>\n",
+       "      <td>1.208333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>154 WEST 84TH STREET</td>\n",
-       "      <td>65</td>\n",
-       "      <td>35</td>\n",
-       "      <td>$698</td>\n",
-       "      <td>9,621</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>698.0</td>\n",
+       "      <td>9621.0</td>\n",
+       "      <td>274.885714</td>\n",
+       "      <td>148.015385</td>\n",
+       "      <td>0.072550</td>\n",
+       "      <td>1.857143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -664,79 +692,112 @@
        "    <tr>\n",
        "      <th>341</th>\n",
        "      <td>WASHINGTON HEIGHTS REHAB PHASE IV (D)</td>\n",
-       "      <td>60</td>\n",
-       "      <td>32</td>\n",
-       "      <td>$578</td>\n",
-       "      <td>8,743</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>578.0</td>\n",
+       "      <td>8743.0</td>\n",
+       "      <td>273.218750</td>\n",
+       "      <td>145.716667</td>\n",
+       "      <td>0.066110</td>\n",
+       "      <td>1.875000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>342</th>\n",
        "      <td>WEEKSVILLE GARDENS</td>\n",
-       "      <td>697</td>\n",
-       "      <td>257</td>\n",
-       "      <td>$619</td>\n",
-       "      <td>141,365</td>\n",
+       "      <td>697.0</td>\n",
+       "      <td>257.0</td>\n",
+       "      <td>619.0</td>\n",
+       "      <td>141365.0</td>\n",
+       "      <td>550.058366</td>\n",
+       "      <td>202.819225</td>\n",
+       "      <td>0.004379</td>\n",
+       "      <td>2.712062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>343</th>\n",
        "      <td>WILLIAMS PLAZA</td>\n",
-       "      <td>1,290</td>\n",
-       "      <td>577</td>\n",
-       "      <td>$496</td>\n",
-       "      <td>242,859</td>\n",
+       "      <td>1290.0</td>\n",
+       "      <td>577.0</td>\n",
+       "      <td>496.0</td>\n",
+       "      <td>242859.0</td>\n",
+       "      <td>420.899480</td>\n",
+       "      <td>188.262791</td>\n",
+       "      <td>0.002042</td>\n",
+       "      <td>2.235702</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>344</th>\n",
        "      <td>WILLIAMSBURG</td>\n",
-       "      <td>2,873</td>\n",
-       "      <td>1,621</td>\n",
-       "      <td>$508</td>\n",
-       "      <td>927,103</td>\n",
+       "      <td>2873.0</td>\n",
+       "      <td>1621.0</td>\n",
+       "      <td>508.0</td>\n",
+       "      <td>927103.0</td>\n",
+       "      <td>571.932758</td>\n",
+       "      <td>322.695092</td>\n",
+       "      <td>0.000548</td>\n",
+       "      <td>1.772363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>345</th>\n",
        "      <td>WISE TOWERS</td>\n",
-       "      <td>736</td>\n",
-       "      <td>399</td>\n",
-       "      <td>$591</td>\n",
-       "      <td>100,247</td>\n",
+       "      <td>736.0</td>\n",
+       "      <td>399.0</td>\n",
+       "      <td>591.0</td>\n",
+       "      <td>100247.0</td>\n",
+       "      <td>251.245614</td>\n",
+       "      <td>136.205163</td>\n",
+       "      <td>0.005895</td>\n",
+       "      <td>1.844612</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>346 rows × 5 columns</p>\n",
+       "<p>346 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               development total_pop num_apts  \\\n",
-       "0                   1010 EAST 178TH STREET       413      220   \n",
-       "1              1162-1176 WASHINGTON AVENUE       141       66   \n",
-       "2                131 SAINT NICHOLAS AVENUE       157      100   \n",
-       "3                       1471 WATSON AVENUE       116       96   \n",
-       "4                     154 WEST 84TH STREET        65       35   \n",
-       "..                                     ...       ...      ...   \n",
-       "341  WASHINGTON HEIGHTS REHAB PHASE IV (D)        60       32   \n",
-       "342                     WEEKSVILLE GARDENS       697      257   \n",
-       "343                         WILLIAMS PLAZA     1,290      577   \n",
-       "344                           WILLIAMSBURG     2,873    1,621   \n",
-       "345                            WISE TOWERS       736      399   \n",
+       "                               development  total_pop  num_apts  \\\n",
+       "0                   1010 EAST 178TH STREET      413.0     220.0   \n",
+       "1              1162-1176 WASHINGTON AVENUE      141.0      66.0   \n",
+       "2                131 SAINT NICHOLAS AVENUE      157.0     100.0   \n",
+       "3                       1471 WATSON AVENUE      116.0      96.0   \n",
+       "4                     154 WEST 84TH STREET       65.0      35.0   \n",
+       "..                                     ...        ...       ...   \n",
+       "341  WASHINGTON HEIGHTS REHAB PHASE IV (D)       60.0      32.0   \n",
+       "342                     WEEKSVILLE GARDENS      697.0     257.0   \n",
+       "343                         WILLIAMS PLAZA     1290.0     577.0   \n",
+       "344                           WILLIAMSBURG     2873.0    1621.0   \n",
+       "345                            WISE TOWERS      736.0     399.0   \n",
        "\n",
-       "    avg_monthly_rent net_sqft  \n",
-       "0               $488   88,172  \n",
-       "1               $502   18,987  \n",
-       "2               $514   29,359  \n",
-       "3               $517   39,937  \n",
-       "4               $698    9,621  \n",
-       "..               ...      ...  \n",
-       "341             $578    8,743  \n",
-       "342             $619  141,365  \n",
-       "343             $496  242,859  \n",
-       "344             $508  927,103  \n",
-       "345             $591  100,247  \n",
+       "     avg_monthly_rent  net_sqft  sqft_per_apt  sqft_per_person  rent_per_sqft  \\\n",
+       "0               488.0   88172.0    400.781818       213.491525       0.005535   \n",
+       "1               502.0   18987.0    287.681818       134.659574       0.026439   \n",
+       "2               514.0   29359.0    293.590000       187.000000       0.017507   \n",
+       "3               517.0   39937.0    416.010417       344.284483       0.012945   \n",
+       "4               698.0    9621.0    274.885714       148.015385       0.072550   \n",
+       "..                ...       ...           ...              ...            ...   \n",
+       "341             578.0    8743.0    273.218750       145.716667       0.066110   \n",
+       "342             619.0  141365.0    550.058366       202.819225       0.004379   \n",
+       "343             496.0  242859.0    420.899480       188.262791       0.002042   \n",
+       "344             508.0  927103.0    571.932758       322.695092       0.000548   \n",
+       "345             591.0  100247.0    251.245614       136.205163       0.005895   \n",
        "\n",
-       "[346 rows x 5 columns]"
+       "     ppl_per_apt  \n",
+       "0       1.877273  \n",
+       "1       2.136364  \n",
+       "2       1.570000  \n",
+       "3       1.208333  \n",
+       "4       1.857143  \n",
+       "..           ...  \n",
+       "341     1.875000  \n",
+       "342     2.712062  \n",
+       "343     2.235702  \n",
+       "344     1.772363  \n",
+       "345     1.844612  \n",
+       "\n",
+       "[346 rows x 9 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
