--- a/Capstone Project/Model_and_Features.ipynb
+++ b/Capstone Project/Model_and_Features.ipynb
@@ -2,22 +2,426 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>English name</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Genres</th>\n",
+       "      <th>Synopsis</th>\n",
+       "      <th>Episodes</th>\n",
+       "      <th>Producers</th>\n",
+       "      <th>Licensors</th>\n",
+       "      <th>Studios</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Source_Book</th>\n",
+       "      <th>Source_Game</th>\n",
+       "      <th>Source_Light novel</th>\n",
+       "      <th>Source_Manga</th>\n",
+       "      <th>Source_Novel</th>\n",
+       "      <th>Source_Original</th>\n",
+       "      <th>Source_Unknown</th>\n",
+       "      <th>Source_Visual novel</th>\n",
+       "      <th>Type_Movie</th>\n",
+       "      <th>Type_TV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Cowboy Bebop</td>\n",
+       "      <td>Cowboy Bebop</td>\n",
+       "      <td>8.75</td>\n",
+       "      <td>Action, Award Winning, Sci-Fi</td>\n",
+       "      <td>Crime is timeless. By the year 2071, humanity ...</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>Bandai Visual</td>\n",
+       "      <td>Funimation, Bandai Entertainment</td>\n",
+       "      <td>Sunrise</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Cowboy Bebop: Tengoku no Tobira</td>\n",
+       "      <td>Cowboy Bebop: The Movie</td>\n",
+       "      <td>8.38</td>\n",
+       "      <td>Action, Sci-Fi</td>\n",
+       "      <td>Another day, another bounty—such is the life o...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sunrise, Bandai Visual</td>\n",
+       "      <td>Sony Pictures Entertainment</td>\n",
+       "      <td>Bones</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Trigun</td>\n",
+       "      <td>Trigun</td>\n",
+       "      <td>8.22</td>\n",
+       "      <td>Action, Adventure, Sci-Fi</td>\n",
+       "      <td>Vash the Stampede is the man with a $$60,000,0...</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>Victor Entertainment</td>\n",
+       "      <td>Funimation, Geneon Entertainment USA</td>\n",
+       "      <td>Madhouse</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Witch Hunter Robin</td>\n",
+       "      <td>Witch Hunter Robin</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td>Action, Drama, Mystery, Supernatural</td>\n",
+       "      <td>Robin Sena is a powerful craft user drafted in...</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>Bandai Visual, Dentsu, Victor Entertainment, T...</td>\n",
+       "      <td>Funimation, Bandai Entertainment</td>\n",
+       "      <td>Sunrise</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Bouken Ou Beet</td>\n",
+       "      <td>Beet the Vandel Buster</td>\n",
+       "      <td>6.94</td>\n",
+       "      <td>Adventure, Fantasy, Supernatural</td>\n",
+       "      <td>It is the dark century and the people are suff...</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>TV Tokyo, Dentsu</td>\n",
+       "      <td>Illumitoon Entertainment</td>\n",
+       "      <td>Toei Animation</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Eyeshield 21</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>7.92</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>Shy, reserved, and small-statured, Deimon High...</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>TV Tokyo, Nihon Ad Systems, TV Tokyo Music, Sh...</td>\n",
+       "      <td>VIZ Media, Sentai Filmworks</td>\n",
+       "      <td>Gallop</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Hachimitsu to Clover</td>\n",
+       "      <td>Honey and Clover</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Comedy, Drama, Romance</td>\n",
+       "      <td>Yuuta Takemoto, a sophomore at an arts college...</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>Dentsu, Genco, Fuji TV, Asmik Ace, Shueisha</td>\n",
+       "      <td>VIZ Media, Discotek Media</td>\n",
+       "      <td>J.C.Staff</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Hungry Heart: Wild Striker</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>7.55</td>\n",
+       "      <td>Comedy, Slice of Life, Sports</td>\n",
+       "      <td>As the younger brother of Japanese soccer star...</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>Nippon Animation</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Initial D Fourth Stage</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>8.16</td>\n",
+       "      <td>Action, Drama</td>\n",
+       "      <td>Takumi Fujiwara finally joins Ryousuke and Kei...</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>OB Planning, Studio Jack</td>\n",
+       "      <td>Funimation</td>\n",
+       "      <td>A.C.G.T.</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Monster</td>\n",
+       "      <td>Monster</td>\n",
+       "      <td>8.87</td>\n",
+       "      <td>Drama, Mystery, Suspense</td>\n",
+       "      <td>Dr. Kenzou Tenma, an elite neurosurgeon recent...</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>VAP, Shogakukan-Shueisha Productions, Nippon T...</td>\n",
+       "      <td>VIZ Media</td>\n",
+       "      <td>Madhouse</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   anime_id                             Name             English name Score  \\\n",
+       "0         1                     Cowboy Bebop             Cowboy Bebop  8.75   \n",
+       "1         5  Cowboy Bebop: Tengoku no Tobira  Cowboy Bebop: The Movie  8.38   \n",
+       "2         6                           Trigun                   Trigun  8.22   \n",
+       "3         7               Witch Hunter Robin       Witch Hunter Robin  7.25   \n",
+       "4         8                   Bouken Ou Beet   Beet the Vandel Buster  6.94   \n",
+       "5        15                     Eyeshield 21                  UNKNOWN  7.92   \n",
+       "6        16             Hachimitsu to Clover         Honey and Clover   8.0   \n",
+       "7        17       Hungry Heart: Wild Striker                  UNKNOWN  7.55   \n",
+       "8        18           Initial D Fourth Stage                  UNKNOWN  8.16   \n",
+       "9        19                          Monster                  Monster  8.87   \n",
+       "\n",
+       "                                 Genres  \\\n",
+       "0         Action, Award Winning, Sci-Fi   \n",
+       "1                        Action, Sci-Fi   \n",
+       "2             Action, Adventure, Sci-Fi   \n",
+       "3  Action, Drama, Mystery, Supernatural   \n",
+       "4      Adventure, Fantasy, Supernatural   \n",
+       "5                                Sports   \n",
+       "6                Comedy, Drama, Romance   \n",
+       "7         Comedy, Slice of Life, Sports   \n",
+       "8                         Action, Drama   \n",
+       "9              Drama, Mystery, Suspense   \n",
+       "\n",
+       "                                            Synopsis Episodes  \\\n",
+       "0  Crime is timeless. By the year 2071, humanity ...     26.0   \n",
+       "1  Another day, another bounty—such is the life o...      1.0   \n",
+       "2  Vash the Stampede is the man with a $$60,000,0...     26.0   \n",
+       "3  Robin Sena is a powerful craft user drafted in...     26.0   \n",
+       "4  It is the dark century and the people are suff...     52.0   \n",
+       "5  Shy, reserved, and small-statured, Deimon High...    145.0   \n",
+       "6  Yuuta Takemoto, a sophomore at an arts college...     24.0   \n",
+       "7  As the younger brother of Japanese soccer star...     52.0   \n",
+       "8  Takumi Fujiwara finally joins Ryousuke and Kei...     24.0   \n",
+       "9  Dr. Kenzou Tenma, an elite neurosurgeon recent...     74.0   \n",
+       "\n",
+       "                                           Producers  \\\n",
+       "0                                      Bandai Visual   \n",
+       "1                             Sunrise, Bandai Visual   \n",
+       "2                               Victor Entertainment   \n",
+       "3  Bandai Visual, Dentsu, Victor Entertainment, T...   \n",
+       "4                                   TV Tokyo, Dentsu   \n",
+       "5  TV Tokyo, Nihon Ad Systems, TV Tokyo Music, Sh...   \n",
+       "6        Dentsu, Genco, Fuji TV, Asmik Ace, Shueisha   \n",
+       "7                                            UNKNOWN   \n",
+       "8                           OB Planning, Studio Jack   \n",
+       "9  VAP, Shogakukan-Shueisha Productions, Nippon T...   \n",
+       "\n",
+       "                              Licensors           Studios  ... Source_Book  \\\n",
+       "0      Funimation, Bandai Entertainment           Sunrise  ...       False   \n",
+       "1           Sony Pictures Entertainment             Bones  ...       False   \n",
+       "2  Funimation, Geneon Entertainment USA          Madhouse  ...       False   \n",
+       "3      Funimation, Bandai Entertainment           Sunrise  ...       False   \n",
+       "4              Illumitoon Entertainment    Toei Animation  ...       False   \n",
+       "5           VIZ Media, Sentai Filmworks            Gallop  ...       False   \n",
+       "6             VIZ Media, Discotek Media         J.C.Staff  ...       False   \n",
+       "7                               UNKNOWN  Nippon Animation  ...       False   \n",
+       "8                            Funimation          A.C.G.T.  ...       False   \n",
+       "9                             VIZ Media          Madhouse  ...       False   \n",
+       "\n",
+       "  Source_Game  Source_Light novel  Source_Manga  Source_Novel  \\\n",
+       "0       False               False         False         False   \n",
+       "1       False               False         False         False   \n",
+       "2       False               False          True         False   \n",
+       "3       False               False         False         False   \n",
+       "4       False               False          True         False   \n",
+       "5       False               False          True         False   \n",
+       "6       False               False          True         False   \n",
+       "7       False               False          True         False   \n",
+       "8       False               False          True         False   \n",
+       "9       False               False          True         False   \n",
+       "\n",
+       "   Source_Original  Source_Unknown  Source_Visual novel  Type_Movie  Type_TV  \n",
+       "0             True           False                False       False     True  \n",
+       "1             True           False                False        True    False  \n",
+       "2            False           False                False       False     True  \n",
+       "3             True           False                False       False     True  \n",
+       "4            False           False                False       False     True  \n",
+       "5            False           False                False       False     True  \n",
+       "6            False           False                False       False     True  \n",
+       "7            False           False                False       False     True  \n",
+       "8            False           False                False       False     True  \n",
+       "9            False           False                False       False     True  \n",
+       "\n",
+       "[10 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "df = pd.read_csv(\"Data/Anime_Processed.csv\")\n",
     "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
