--- a/Capstone Project/Data_Processing.ipynb
+++ b/Capstone Project/Data_Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "[10 rows x 24 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,11 +545,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(columns = [\"Image URL\", \"Scored By\", \"Duration\", \"Status\", \"Aired\", \"Other name\"]) "
+    "df = df.drop(columns = [\"Image URL\", \"Scored By\", \"Duration\", \"Status\", \"Aired\", \"Other name\", \"Favorites\", \"Members\"]) "
    ]
   },
   {
@@ -560,12 +560,13 @@
     "Duration is not data that we may have access to nor is it always consistent \n",
     "Status doesn't matter as we are predicting the score it will have \n",
     "Air date should not be a feature as this model would be used to predict the score of new anime\n",
-    "Other name is not processable as its in another language"
+    "Other name is not processable as its in another language\n",
+    "Favorites and members are too arbitrary are not necessarily great features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +583,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +603,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 11978 entries, 0 to 24886\n",
-      "Data columns (total 18 columns):\n",
+      "Data columns (total 16 columns):\n",
       " #   Column        Non-Null Count  Dtype \n",
       "---  ------        --------------  ----- \n",
       " 0   anime_id      11978 non-null  int64 \n",
@@ -621,10 +622,8 @@
       " 13  Rating        11978 non-null  object\n",
       " 14  Rank          11978 non-null  object\n",
       " 15  Popularity    11978 non-null  int64 \n",
-      " 16  Favorites     11978 non-null  int64 \n",
-      " 17  Members       11978 non-null  int64 \n",
-      "dtypes: int64(4), object(14)\n",
-      "memory usage: 1.7+ MB\n"
+      "dtypes: int64(2), object(14)\n",
+      "memory usage: 1.6+ MB\n"
      ]
     }
    ],
@@ -636,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +647,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +679,7 @@
        "Name: count, Length: 244, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +709,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 11978 entries, 0 to 24886\n",
-      "Data columns (total 17 columns):\n",
+      "Data columns (total 15 columns):\n",
       " #   Column        Non-Null Count  Dtype \n",
       "---  ------        --------------  ----- \n",
       " 0   anime_id      11978 non-null  int64 \n",
@@ -728,10 +727,8 @@
       " 12  Rating        11978 non-null  object\n",
       " 13  Rank          11978 non-null  object\n",
       " 14  Popularity    11978 non-null  int64 \n",
-      " 15  Favorites     11978 non-null  int64 \n",
-      " 16  Members       11978 non-null  int64 \n",
-      "dtypes: int64(4), object(13)\n",
-      "memory usage: 1.6+ MB\n"
+      "dtypes: int64(2), object(13)\n",
+      "memory usage: 1.5+ MB\n"
      ]
     }
    ],
@@ -741,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +765,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +813,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +842,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 11978 entries, 0 to 24886\n",
-      "Data columns (total 25 columns):\n",
+      "Data columns (total 23 columns):\n",
       " #   Column               Non-Null Count  Dtype \n",
       "---  ------               --------------  ----- \n",
       " 0   anime_id             11978 non-null  int64 \n",
@@ -861,25 +858,205 @@
       " 10  Rating               11978 non-null  object\n",
       " 11  Rank                 11978 non-null  object\n",
       " 12  Popularity           11978 non-null  int64 \n",
-      " 13  Favorites            11978 non-null  int64 \n",
-      " 14  Members              11978 non-null  int64 \n",
-      " 15  Source_Book          11978 non-null  bool  \n",
-      " 16  Source_Game          11978 non-null  bool  \n",
-      " 17  Source_Light novel   11978 non-null  bool  \n",
-      " 18  Source_Manga         11978 non-null  bool  \n",
-      " 19  Source_Novel         11978 non-null  bool  \n",
-      " 20  Source_Original      11978 non-null  bool  \n",
-      " 21  Source_Unknown       11978 non-null  bool  \n",
-      " 22  Source_Visual novel  11978 non-null  bool  \n",
-      " 23  Type_Movie           11978 non-null  bool  \n",
-      " 24  Type_TV              11978 non-null  bool  \n",
-      "dtypes: bool(10), int64(4), object(11)\n",
-      "memory usage: 1.6+ MB\n"
+      " 13  Source_Book          11978 non-null  bool  \n",
+      " 14  Source_Game          11978 non-null  bool  \n",
+      " 15  Source_Light novel   11978 non-null  bool  \n",
+      " 16  Source_Manga         11978 non-null  bool  \n",
+      " 17  Source_Novel         11978 non-null  bool  \n",
+      " 18  Source_Original      11978 non-null  bool  \n",
+      " 19  Source_Unknown       11978 non-null  bool  \n",
+      " 20  Source_Visual novel  11978 non-null  bool  \n",
+      " 21  Type_Movie           11978 non-null  bool  \n",
+      " 22  Type_TV              11978 non-null  bool  \n",
+      "dtypes: bool(10), int64(2), object(11)\n",
+      "memory usage: 1.4+ MB\n"
      ]
     }
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Popularity\n",
+       "0        26\n",
+       "15407     4\n",
+       "4666      4\n",
+       "17460     4\n",
+       "19995     4\n",
+       "         ..\n",
+       "20957     1\n",
+       "23336     1\n",
+       "24681     1\n",
+       "24686     1\n",
+       "17604     1\n",
+       "Name: count, Length: 10471, dtype: int64"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Popularity\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def assign_category(popularity):\n",
+    "    if popularity == 0:\n",
+    "        return \"Unknown\"\n",
+    "    if popularity <= 10:\n",
+    "        return \"Top 10\"\n",
+    "    elif popularity <= 100:\n",
+    "        return \"Top 100\"\n",
+    "    elif popularity <= 500:\n",
+    "        return \"Top 500\"\n",
+    "    elif popularity <= 1000:\n",
+    "        return \"Top 1,000\"\n",
+    "    elif popularity <= 5000:\n",
+    "        return \"Top 5,000\"\n",
+    "    elif popularity <= 7500:\n",
+    "        return \"Top 7,500\"\n",
+    "    elif popularity <= 10000:\n",
+    "        return \"Top 10,000\"\n",
+    "    elif popularity <= 25000:\n",
+    "        return \"Top 25,000\"\n",
+    "    elif popularity <= 50000:\n",
+    "        return \"Top 50,000\"\n",
+    "    else:\n",
+    "        return \"Unknown\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Popularity_category\n",
+       "Top 50,000    6710\n",
+       "Top 5,000     2550\n",
+       "Top 10,000    1747\n",
+       "Top 1,000      454\n",
+       "Top 500        391\n",
+       "Top 100         90\n",
+       "Unknown         26\n",
+       "Top 10          10\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Popularity_category'] = df['Popularity'].apply(assign_category)\n",
+    "df['Popularity_category'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns = [\"Popularity\"]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rank\n",
+       "UNKNOWN    315\n",
+       "0.0         26\n",
+       "12032.0      4\n",
+       "18804.0      4\n",
+       "15370.0      4\n",
+       "          ... \n",
+       "18098.0      1\n",
+       "12952.0      1\n",
+       "13468.0      1\n",
+       "15322.0      1\n",
+       "6943.0       1\n",
+       "Name: count, Length: 9998, dtype: int64"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Rank'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Rank'] = pd.to_numeric(df['Rank'], errors = 'coerce').fillna(0).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rank_category\n",
+       "Top 50,000    5799\n",
+       "Top 5,000     2580\n",
+       "Top 10,000    2461\n",
+       "Top 1,000      374\n",
+       "Unknown        341\n",
+       "Top 500        330\n",
+       "Top 100         84\n",
+       "Top 10           9\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Rank_category'] = df['Rank'].apply(assign_category)\n",
+    "df['Rank_category'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns = [\"Rank\"]) "
    ]
   },
   {
