--- a/Capstone Project/Proposal_Template.ipynb
+++ b/Capstone Project/Proposal_Template.ipynb
@@ -26,6 +26,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5ce16ebc",
+   "metadata": {},
+   "source": [
+    "Project proposal for capstone project, and initial EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0edef9c5-b591-45b5-994e-62da73d304c8",
    "metadata": {},
    "source": [
