--- a/Capstone Project/2023_Data_Processing.ipynb
+++ b/Capstone Project/2023_Data_Processing.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "[10 rows x 24 columns]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
        "Name: count, Length: 244, dtype: int64"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -838,73 +838,13 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df[\"Source\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Hot encode Source and Type\n",
-    "df = pd.get_dummies(df, columns = [\"Source\", \"Type\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 24831 entries, 0 to 24904\n",
-      "Data columns (total 27 columns):\n",
-      " #   Column               Non-Null Count  Dtype \n",
-      "---  ------               --------------  ----- \n",
-      " 0   anime_id             24831 non-null  int64 \n",
-      " 1   Name                 24831 non-null  object\n",
-      " 2   English name         24831 non-null  object\n",
-      " 3   Score                24831 non-null  object\n",
-      " 4   Genres               24831 non-null  object\n",
-      " 5   Synopsis             24831 non-null  object\n",
-      " 6   Episodes             24831 non-null  object\n",
-      " 7   Producers            24831 non-null  object\n",
-      " 8   Licensors            24831 non-null  object\n",
-      " 9   Studios              24831 non-null  object\n",
-      " 10  Rating               24831 non-null  object\n",
-      " 11  Rank                 24831 non-null  object\n",
-      " 12  Popularity           24831 non-null  int64 \n",
-      " 13  Source_Book          24831 non-null  bool  \n",
-      " 14  Source_Game          24831 non-null  bool  \n",
-      " 15  Source_Light novel   24831 non-null  bool  \n",
-      " 16  Source_Manga         24831 non-null  bool  \n",
-      " 17  Source_Novel         24831 non-null  bool  \n",
-      " 18  Source_Original      24831 non-null  bool  \n",
-      " 19  Source_Unknown       24831 non-null  bool  \n",
-      " 20  Source_Visual novel  24831 non-null  bool  \n",
-      " 21  Type_Movie           24831 non-null  bool  \n",
-      " 22  Type_Music           24831 non-null  bool  \n",
-      " 23  Type_ONA             24831 non-null  bool  \n",
-      " 24  Type_OVA             24831 non-null  bool  \n",
-      " 25  Type_Special         24831 non-null  bool  \n",
-      " 26  Type_TV              24831 non-null  bool  \n",
-      "dtypes: bool(14), int64(2), object(11)\n",
-      "memory usage: 3.0+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
    ]
   },
   {
@@ -916,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +877,7 @@
        "Name: count, Length: 18343, dtype: int64"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +938,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +980,7 @@
        "Name: count, Length: 15198, dtype: int64"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1019,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1069,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1098,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,11 +1109,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"2023_Processed.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After evaluating the 2024 and 2023 datasets, it seems more appropriate to go with the 2024 dataset given the larger size and less Unknown values"
    ]
   }
  ],
